--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="./js/script.js" defer></script>
 </head>
 
 <body>
