--- a/index.html
+++ b/index.html
@@ -19,28 +19,16 @@
 		<form class="todo-control">
 			<label><input class="header-input" type="text" placeholder="Какие планы?"></label>
 			<button class="header-button" id="add" type="submit"></button>
-		</form>s
+		</form>
 	</header>
 
 	<div class="todo-container">
 
 		<ul class="todo todo-list" id="todo">
-			<li class="todo-item">
-				<span class="text-todo">Сварить кофе</span>
-				<div class="todo-buttons">
-					<button class="todo-remove"></button>
-					<button class="todo-complete"></button>
-				</div>
-			</li>
+			
 		</ul>
 		<ul class="todo todo-completed" id="completed">
-			<li class="todo-item">
-				<span class="text-todo">Помыть посуду</span>
-				<div class="todo-buttons">
-					<button class="todo-remove"></button>
-					<button class="todo-complete"></button>
-				</div>
-			</li>
+			
 		</ul>
 	</div>
 
