просто коммит, вроде без изменений, но всё работает

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="./js/script.js" defer></script>
+	<link rel="shortcut icon" href="https://faviconka.ru/ico/1/faviconka.ru_1_100389.ico" type="image/x-icon">
 </head>
 
 <body>
